--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     position: relative;
 }
 
-nav .logo a {
+/*nav .logo a {
     font-size: 30px;
     font-weight: 400;
     float: left;
